# gazprom_bot

./: .gitignore  .pre-commit-config.yaml  BotStatuses.drawio  README.md  docker-compose.yaml
ci-cd/: webapp.dockerfile
src/backend/: pyproject.toml
src/backend/webapp/bot_api/: admin.py  models.py
src/backend/webapp/bot_api/migrations/: 0001_initial.py
src/backend/webapp/config/: settings.py
