[tool.poetry]
name = "gazprom-backend"
version = "0.1.0"
description = ""
authors = ["German", "Nikita"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-unfold = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
